--- a/Controller/src/main/resources/templates/admin/admin-article-insert.html
+++ b/Controller/src/main/resources/templates/admin/admin-article-insert.html
@@ -141,7 +141,7 @@
 
 <body>
     <div class="content m-5" layout:fragment="content">
-        <script th:src="@{/js/ckeditor/ckeditor.js}"></script>
+        <script th:src="@{/Js/ckeditor/ckeditor.js}"></script>
         <form style="display: none;" method="POST" id="frm" enctype="multipart/form-data">
             <input id="chooseImg" type="file" name="file" accept=".png, .jpg, .jpeg"><br><br>
             <button type="submit" style="display: none;" id="added">add</button>
