--- a/Controller/src/main/resources/templates/admin/admin-home.html
+++ b/Controller/src/main/resources/templates/admin/admin-home.html
@@ -18,7 +18,7 @@
             <div class="bg-white p-5 right-side-bar-upper-div ">
                 <!-- upper -->
                
-                <h3 class="left-side-text text-center my-3"><b>Start Your Day With KhmerHowTo</b></h3>
+                <h3 class="left-side-text text-center my-3"><b>Start Your Day With KUNLOES</b></h3>
                 <!-- middle -->
                 <div class="d-flex flex-lg-row flex-column justify-content-around">
                     <div class="card p-2 border-0" style="width: 25%;">
