--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -187,7 +187,7 @@
                         
                             <div class="">
                             <ul class="list-group list-group-flush border-top">
-                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin/customize';">Customize</li>
+                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin/customize/-1'">Customize</li>
                                 <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin';">Admin</li>
                                 <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/logout';">Logout</li>
                             </ul>
