--- a/Controller/src/main/resources/templates/admin/admin-category.html
+++ b/Controller/src/main/resources/templates/admin/admin-category.html
@@ -27,6 +27,10 @@
             box-shadow: 05px 10px 18px rgba(33,33,33,.2); 
             }
             .card{
+                width: 100%;
+                margin-bottom: 1%;
+            }
+            .cate-card{
                 width: 13%;
                 margin-bottom: 1%;
             }
@@ -42,7 +46,7 @@
                     <h1 class="my-3">
                         <b>Category List</b>
                         <br>
-                        KhmerHowTo
+                        KUNLOES
                     </h1>
                     <input type="text" class="form-control-one-line  my-2  " id="category_search" placeholder="  find your category">
                 </div>
@@ -68,20 +72,17 @@
             <div class="d-flex flex-wrap justify-content-center ">
                <!-- ON DYNASMIC  -->
                 
-                <div th:each="category:${categories}" class="card bg-color-two hover-white-highlight-for-click category-card mr-3" th:data-id="${category.id}" style="">
+                <div th:each="category:${categories}" class="cate-card bg-color-two hover-white-highlight-for-click category-card mr-3" th:data-id="${category.id}" style="">
                     <div class="m-4">
                         <img th:src="${category.image}" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body p-1">
                         <h6 class="card-title text-center">
-                            <b class="category-name" th:text="${category.name}">Machine Learning</b>
+                            <b class="category-name" th:text="${category.name}"> </b>
                         </h6>
                     </div>
                 </div>
-                 
-     
-               
-                
+
             </div>
             <!-- FOOTER DIV  -->
               <!-- Modal -->
@@ -289,7 +290,7 @@
                        
                         _promise.then(json => {
                            
-                            _category.image = "/images/"+json.Data;
+                            _category.image = "/img/"+json.Data;
                             if( _id == "0"){
                                 post_new_category('/api/categories',_category); 
                             }else{
@@ -331,7 +332,7 @@
                         let reader = new FileReader();
                         reader.onload = function (e) {
                             // $('#img-preview').attr('src', e.target.result);
-                            $("#modal_img_show").attr("src", e.target.result)
+                            $("#modal_img_show").attr("src", e.target.result);
                         };
                         reader.readAsDataURL(input.files[0]);
                     }
