--- a/Controller/src/main/resources/templates/clients/content-detail.html
+++ b/Controller/src/main/resources/templates/clients/content-detail.html
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src=""></script>
-    <meta property="og:url"           content="https://www.your-domain.com/your-page.html" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Your Website Title" />
-    <meta property="og:description"   content="Your description" />
-    <meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
- </head>
+
+    <meta property="og:url"                content="" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              th:content="${title}" />
+    <meta property="og:description"        th:content="${body}" />
+    <meta property="og:image"              th:content="${image}" />
+
+</head>
 
 <body>
 
@@ -78,7 +79,7 @@
     <div class="row">
         <div class="col-12">
             <p class="head-size font-weight-bold" id="tt" style="color: #46464e;">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit
+
             </p>
         </div>
     </div>
@@ -105,7 +106,7 @@
                             <div class="col-12 pl-0 ">
                                         <span id="user_name" style="color: #46464e;" bio="" location=""
                                               class="point user_name"
-                                              data-toggle="tooltip" data-html="true"> Kong Pengsea</span>
+                                              data-toggle="tooltip" data-html="true">  </span>
                             </div>
                             <span id="time" class="content-timestamp"></span>
                         </div>
@@ -115,14 +116,13 @@
                 <div class="col-2 col-sm-2 col-md-2 col-lg-2 pr-0">
                     <table style="float: right; margin-top: 3%;">
                         <tr>
-                            <td class=" point" style="    padding-bottom: 4px;
-"><img onclick="printContent()" style="max-width: 31px;color: #46464e;"
+                            <td class=" point" style=" padding-bottom: 4px;"><img onclick="printContent()" style="max-width: 31px;color: #46464e;"
                                                        src="/icon/print.svg" alt="">
                             </td>
 
                             <td class="p-1 point pt-1" >
 
-                                     <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&appId=1242809985886635&width=77&height=28" width="29" height="30" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                                     <iframe id="share_to_fb" src="https://www.facebook.com/plugins/share_button.php?href=http://128.199.224.215:15104/detail/90&layout=button&size=large&appId=1242809985886635&width=77&height=28" width="29" height="30" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 
                                 </td>
                             <td class=" point" style="padding-bottom: 2px"> <img style="max-width: 30px; margin-left: 2.6px;    margin-bottom: 7px; " src="/icon/d.svg"
@@ -258,19 +258,19 @@
             <h4 th:text="#{recommended-article}">អត្ថបទដែលគួរអាន</h4>
 
         </div>
-        <div th:each=" article : ${RECOMMEND_ARTICLE}" th:object="${article}" class="article_object_list row" style=" margin-left: 1px;" th:onclick="'onClickRedirectTo('+*{id}+')'">
+        <div th:each=" article : ${RECOMMEND_ARTICLE}"  class="article_object_list row" style=" margin-left: 1px;" th:onclick="'onClickRedirectTo('+*{id}+')'">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-2 pl-0 pr-0">
                         <img class="img-fluid z-depth-2" style="width: 200px; height: 120px; border-radius: 4px;"
-                            th:src="*{thumbnail}"
+                            th:src="${article.thumbnail}"
                             data-holder-rendered="true">
                     </div>
                     <div class="col-10">
                         <div class="container-fluid">
                             <div class="row mb-0">
-                                <h5 style="color: #46464e;margin-top: 0;" th:text="*{title}">Lorem ipsum, dolor sit amet consectetur </h5>
-                                <div class="body-text" th:text="*{body}"></div>
+                                <h5 style="color: #46464e;margin-top: 0;" th:text="${article.title}">Lorem ipsum, dolor sit amet consectetur </h5>
+                                <div class="body-text" th:text="${lstBody.get(article.getId())}"></div>
                             </div>
                             <div class="row">
                                 <div class="col-12" style="position: relative;width: max-content;position: absolute;right: 0px;bottom: 0px;
@@ -296,7 +296,7 @@
                     <div class="col-10">
                         <div class="container-fluid">
                             <div class="row mb-0">
-                                <h5 style="color: #46464e;margin-top: 0;">Lorem ipsum, dolor sit amet consectetur </h5>
+                                <h5 style="color: #46464e;margin-top: 0;"> </h5>
                                 <p></p>
                             </div>
                             <div class="row">
@@ -324,10 +324,8 @@
                     <div class="col-10">
                         <div class="container-fluid">
                             <div class="row mb-0">
-                                <h5 style="color: #46464e;margin-top: 0;">Lorem ipsum, dolor sit amet consectetur </h5>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere officiis, praesentium
-                                tempora cumque illo mollitia deserunt ad, asperiores totam minima quae commodi
-                                necessitatibus,
+                                <h5 style="color: #46464e;margin-top: 0;">
+                                    </h5>
                             </div>
                             <div class="row">
                                 <div class="col-12" style="position: relative;width: max-content;position: absolute;right: 0px;bottom: 0px;
@@ -354,10 +352,8 @@
                     <div class="col-10">
                         <div class="container-fluid">
                             <div class="row mb-0" style="color:  #46464e;">
-                                <h5 style="color: #46464e;margin-top: 0;">Lorem ipsum, dolor sit amet consectetur </h5>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere officiis, praesentium
-                                tempora cumque illo mollitia deserunt ad, asperiores totam minima quae commodi
-                                necessitatibus,
+                                <h5 style="color: #46464e;margin-top: 0;">
+                                    </h5>
                             </div>
                             <div class="row">
                                 <div class="col-12" style="position: relative;width: max-content;position: absolute;right: 0px;bottom: 0px;
@@ -423,21 +419,37 @@
             var element = document.getElementById('bContent');
             var work = html2pdf().set(opt).from(element).save();
         }
-        function setSrc(){
-            var url=document.URL;
-            $('#share_to_fb').attr('src',"https://www.facebook.com/plugins/share_button.php?href="+url+"&layout=button&size=large&appId=1242809985886635&width=77&height=28");
 
-        }
     </script>
     <script>
+
+
         var articleId = window.location.pathname;
 
         // Document ready function
 
-
         $(document).ready(function () {
+            function setMetaForFacebookShared(url, title, description, thumbnail) {
+                var metas = document.getElementsByTagName("META")
+                for (var i = 0; i < metas.length; i++){
+                    var name = document.getElementsByTagName("META")[i].name
+                    console.log(name)
+                    if (name === "og:url"){
+                        document.getElementsByTagName("META")[i].content = url
+                    }else if (name === "og:title"){
+                        document.getElementsByTagName("META")[i].content = title
+                    } else if (name === "og:description") {
+                        document.getElementsByTagName("META")[i].content = description
+                    } else if (name === "og:image") {
+                        document.getElementsByTagName("META")[i].content = thumbnail
+                    }
+                }
+            }
+            function setSrc(){
+                var url=document.URL;
+                $('#share_to_fb').attr('src',"https://www.facebook.com/plugins/share_button.php?href="+url+"&layout=button&size=large&appId=1242809985886635&width=77&height=28");
 
-
+            }
             /*
             * request content
             * append to body of div
@@ -450,13 +462,17 @@
                 success: function (data) {
                     console.log(data)
                     $('#bContent').append(data["body"]);
+
+                    setMetaForFacebookShared($(location).attr('href'),  data["title"], data["body"].substring(0, 60), data.thumbnail);
                     $('#user_name').text(data["user"].name);
+
                     $('#ownerImg').attr('src', data["user"].profilePicture);
 
                     /*
                     * set title
                     * */
                     $('#tt').html(data["title"]);
+                    $('#title').attr('content',data["title"]);
                     /*
                     * set category name
                     * */
@@ -497,6 +513,7 @@
 
                     //call function on page 0 -> first load
                     showComment(0)
+                    setSrc();
                 },
                 error: function (data) {
                     console.log(data)
@@ -567,7 +584,7 @@
         function showComment(page) {
             $.ajax({
                 type: 'GET',
-                url: '/api/comments/search/findAllBycontentIdOrderById?id=' + [[${id}]] + '&page=' + page + '&size=3',
+                url: '/api/comments/search/findAllBycontentIdAndStatusOrderById?id=' + [[${id}]] + '&st=1&page=' + page + '&size=3',
                 contentType: false,
                 processData: false,
                 success: function (data) {
