--- a/Controller/src/main/resources/templates/clients/userCustomize.html
+++ b/Controller/src/main/resources/templates/clients/userCustomize.html
@@ -49,22 +49,22 @@
                         <div class="py-4 d-flex justify-content-around">
                             <div class="">
                                 <label>Name</label>
-                                <input type="text" class="form-control bg-color-two" placeholder="Enter name" th:field="*{name}" th:value="*{getName()}" >
+                                <input id="name" type="text" class="form-control bg-color-two" placeholder="Enter name" th:field="*{name}" th:value="*{getName()}" >
                             </div>
                             <div class="">
                                 <label>Sex</label>
-                                <input type="text" class="form-control bg-color-two" placeholder="User's Gender" th:field="*{sex}" th:value="*{getSex()}">
+                                <input id="gender" type="text" class="form-control bg-color-two" placeholder="User's Gender" th:field="*{sex}" th:value="*{getSex()}">
                             </div>
                         </div>
                         <!-- middle form -->
                         <div class="py-4 d-flex justify-content-around">
                             <div class="">
                                 <label>Location</label>
-                                <input type="text" class="form-control bg-color-two" placeholder="Enter name" th:field="*{location}" th:value="*{getLocation()}">
+                                <input type="text" id="location" class="form-control bg-color-two" placeholder="Enter name" th:field="*{location}" th:value="*{getLocation()}">
                             </div>
                             <div class="">
                                 <label>Phone</label>
-                                <input type="text" class="form-control bg-color-two" placeholder="018-6319-168" th:field="*{phoneNumber}" th:value="*{getPhoneNumber()}">
+                                <input type="text" id="phone" class="form-control bg-color-two" placeholder="018-6319-168" th:field="*{phoneNumber}" th:value="*{getPhoneNumber()}">
                             </div>
                         </div>
                         <!-- last  -->
@@ -81,7 +81,8 @@
                         </div>
 
                         <div class="text-center">
-                            <input type="submit" class="btn btn-success " value="Update"></button>
+                            <input onclick="validationUpdate()" id="btn_validation" class="btn btn-success " value="Update"></button>
+                            <input type="submit" id="update" class="btn btn-success d-none" value=""></button>
                         </div>
                     </form>
                 </div>
@@ -93,6 +94,30 @@
         </div>
         <div layout:fragment="content-js">
             <script>
+                function validationUpdate(){
+
+                    if ($('#name').val()==""){
+                        alert("please input name");
+                        return;
+                    }
+                    if ($('#gender').val()==""){
+                        alert("please input gender");
+                        return;
+                    }
+
+                    if ($('#location').val()==""){
+                        alert("please input location")
+                        return;
+                    }
+
+                    if ($('#phone').val()==""){
+                        alert("please input phone number");
+                        return;
+                    }
+
+                    $("#update").click();
+
+                }
                 $(document).ready(function () {
                     function readURL(input) {
                         if (input.files && input.files[0]) {
