--- a/Controller/src/main/resources/templates/home-layout.html
+++ b/Controller/src/main/resources/templates/home-layout.html
@@ -15,7 +15,6 @@
     <style>
         body{
             font-family: 'Montserrat','Hanuman' ,sans-serif, serif ;
-            
         }
         .bg-color-two {
             background-color: #E5EAED;
@@ -144,7 +143,7 @@
                 }
 
                 $.ajax({
-                    url: `/api/contents/search/findByTitleContainingIgnoreCase?title=${name}&page=0&size=3&projection=ContentNotificationProjection`,
+                    url: `/api/contents/search/findByStatusAndTitleContainingIgnoreCase?st=1&title=${name}&page=0&size=3&projection=ContentNotificationProjection`,
                     method: 'GET',
                     success: function (obj) {
                         tooltip.show();
@@ -310,7 +309,7 @@
             return ` <a class="notifications-content" href="/detail/${article_id}">
                             <div class="notifications-item border-bottom">
                                 <p class="item-title">New article has been posted in <b> ${category_name}</b></p>
-                                <p class="item-info text-muted">${time}</p>
+                                <p class="item-info text-muted content-timestamp">${time}</p>
                             </div>
 
                 </a>`
@@ -319,7 +318,7 @@
             return ` <a class="notifications-content" href="/detail/${article_id}">
                             <div class="notifications-item border-bottom">
                                 <p class="item-title">${comment_body}</b></p>
-                                <p class="item-info text-muted">${time}</p>
+                                <p class="item-info text-muted content-timestamp">${time}</p>
                             </div>
 
                 </a>`
