fix on notificattion

--- a/Controller/src/main/resources/templates/admin-layout.html
+++ b/Controller/src/main/resources/templates/admin-layout.html
@@ -135,7 +135,7 @@
 
         }
         const convertAdminJsonToNotificationList = (article_id,comment_body,time) => {
-            return ` <a class="notifications-content" href="${article_id}">
+            return ` <a class="notifications-content" href="detail/${article_id}">
                             <div class="notifications-item border-bottom">
                                 <p class="item-title">${comment_body}</b></p>
                                 <p class="item-info text-muted">${time}</p>
